# ipython-neo4j

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/ipython_neo4j/: __init__.py  connection.py  display.py  magic.py  result.py
tests/: test_connection.py  test_integration.py  test_magic.py  test_result.py
